# AudioSurge

./: .gitignore  CMakeLists.txt  README.md  app_common.h  audio_devices.cpp  audio_devices.h  audio_engine.cpp  audio_engine.h  embedded_ui.h  gui_main.cpp  main.cpp  ring_buffer.h  wasapi_capture.cpp  wasapi_capture.h  wasapi_output.cpp  wasapi_output.h
.agents/skills/audioflux-project-structure/: SKILL.md
.agents/skills/audiosurge-project-structure/: SKILL.md
src/: app.rc  gui_main.cpp  resource.h
src/audio/: audio_devices.cpp  audio_devices.h  audio_engine.cpp  audio_engine.h  ring_buffer.h  wasapi_output.cpp  wasapi_output.h
src/common/: app_common.h  app_state.cpp  app_state.h  embedded_ui.h
src/system/: system_volume.cpp  system_volume.h
tools/: embed_logo.py
